--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,20 @@
     width: 4px;
     margin: 8px 10px;
   }
+
+  .first-screen-gradient {
+    background: linear-gradient(
+      180deg,
+      rgba(110, 110, 110, 1) 0%,
+      rgba(80, 80, 80, 1) 10%,
+      rgba(25, 25, 25, 1) 90%,
+      rgba(25, 25, 25, 1) 100%
+    );
+  }
+
+  .mask-gradient {
+    mask-image: linear-gradient(transparent, black);
+  }
 }
 
 :root {
@@ -35,17 +49,20 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 240, 240, 240;
-    --background-start-rgb: 20, 20, 20;
-    --background-end-rgb: 20, 20, 20;
+    --background-start-rgb: 25, 25, 25;
+    --background-end-rgb: 25, 25, 25;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+
+  color: rgb(var(--foreground-rgb));
+  background: rgb(var(--background-start-rgb));
 }
